# Hieroglyphic

./: .gitignore  Cargo.toml  Hieroglyphic.doap  PRIVACY_POLICY.md  README.md  build.rs  meson.build  symbols.yaml  typst-aliases.yaml  unicode_to_latex.yaml
.github/workflows/: ci.yml
build-aux/: io.github.finefindus.Hieroglyphic.Devel.json  io.github.finefindus.Hieroglyphic.json
data/: io.github.finefindus.Hieroglyphic.desktop.in.in  io.github.finefindus.Hieroglyphic.gschema.xml.in  io.github.finefindus.Hieroglyphic.metainfo.xml.in.in  io.github.finefindus.Hieroglyphic.service.in  meson.build  model.onnx
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: contribution-dialog.ui  symbol-item.ui  window.ui
po/: LINGUAS  be.po  bg.po  ca.po  cs.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  he.po  hi.po  hieroglyphic.pot  hr.po  hu.po  ia.po  id.po  it.po  ka.po  kk.po  kw.po  nb.po  nl.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po  uz.po  zh_CN.po
scripts/: build-macos-app.sh  generate_icons.py  load_typst_aliases.py  load_unicode_to_latex_mapping.py  prepare_data.py  train.ipynb
src/: application.rs  main.rs  meson.build  window.rs
src/classify/: classifier.rs  mod.rs  stroke.rs  symbol.rs
src/widgets/: about.rs  drawing_area.rs  mod.rs  symbol_item.rs  symbol_object.rs
