[package]
name = "hieroglyphic"
version = "2.3.0"
authors = ["FineFindus <FineFindus@proton.me>"]
edition = "2024"
rust-version = "1.95"
description = """Find LaTeX symbols"""
license = "GPL-3.0"
repository = "https://github.com/FineFindus/Hieroglyphic"

[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.11", package = "gtk4", features = ["v4_22"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_9"] }
tracing = "0.1"
tracing-subscriber = "0.3"
itertools = "0.14"
async-channel = "2.5"
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "api-24",
] }
ndarray = "0.17"
hex = "0.4"
phf = "0.13"
ureq = { version = "3.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gio = { version = "0.22", features = ["v2_70"] }

[build-dependencies]
phf_codegen = "0.13"
yaml-rust2 = "0.11"
hex = "0.4"
# mitex doesn't have any tagged versions unfortunately
mitex = { git = "https://github.com/mitex-rs/mitex", rev = "0680e50" }
# we can't use the precompiled lib here because we need the typst code
# in the 'packages' dir of mitex to build the default command spec
mitex-spec-gen = { git = "https://github.com/mitex-rs/mitex", rev = "0680e50" }
regex = "1.12"
